# salary-prediction

./: README.md  pyproject.toml
notebooks/: Salary_Exploration_Prediction_students.ipynb
streamlit-app/: app.py
streamlit-app/pages/: data_exploration.py  model_evaluation.py
streamlit-app/utils/: utils.py
